<?xml version="1.0"?>
<package>
    <name>shadowlibs</name>
    <version>0.0.0</version>
    <description>The shadowlibs package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="kganguly@cs.umd.edu">Kanishka Ganguly</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <license>GPLv3</license>

    <!-- Author tags are optional, multiple are allowed, one per tag -->
    <author email="kganguly@cs.umd.edu">Kanishka Ganguly</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>geometry_msgs</build_depend>
    <build_depend>control_msgs</build_depend>
    <build_depend>moveit_msgs</build_depend>
    <build_depend>moveit_ros_planning</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    <build_depend>moveit_core</build_depend>
    <build_depend>trajectory_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>moveit_visual_tools</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>interactive_markers</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>sr_robot_msgs</build_depend>

    <run_depend>geometry_msgs</run_depend>
    <run_depend>control_msgs</run_depend>
    <run_depend>trajectory_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>interactive_markers</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>moveit_msgs</run_depend>
    <run_depend>moveit_ros_planning</run_depend>
    <run_depend>moveit_ros_planning_interface</run_depend>
    <run_depend>moveit_core</run_depend>
    <run_depend>moveit_visual_tools</run_depend>
    <run_depend>sr_robot_msgs</run_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
