<?xml version="1.0"?>
<package format="2">
    <name>shadowlibs</name>
    <version>0.0.0</version>
    <description>The shadowlibs package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="kganguly@cs.umd.edu">Kanishka Ganguly</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <license>GPLv3</license>

    <!-- Author tags are optional, multiple are allowed, one per tag -->
    <author email="kganguly@cs.umd.edu">Kanishka Ganguly</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>geometry_msgs</build_depend>
    <build_depend>control_msgs</build_depend>
    <build_depend>moveit_msgs</build_depend>
    <build_depend>moveit_ros_planning</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    <build_depend>moveit_core</build_depend>
    <build_depend>trajectory_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>moveit_visual_tools</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>interactive_markers</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>sr_robot_msgs</build_depend>
    <build_depend>eigen</build_depend>
    <!-- Realtime controller dependencies -->
    <build_depend>pluginlib</build_depend>
    <build_depend>ros_ethercat_model</build_depend>
    <build_depend>sr_mechanism_controllers</build_depend>
    <build_depend>realtime_tools</build_depend>
    <build_depend>controller_interface</build_depend>
    <build_depend>sr_hardware_interface</build_depend>
    <build_depend>controller_manager_msgs</build_depend>
    <build_depend>control_toolbox</build_depend>
    <build_depend>control_msgs</build_depend>

    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>control_msgs</exec_depend>
    <exec_depend>trajectory_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>interactive_markers</exec_depend>
    <exec_depend>actionlib</exec_depend>
    <exec_depend>moveit_msgs</exec_depend>
    <exec_depend>moveit_ros_planning</exec_depend>
    <exec_depend>moveit_ros_planning_interface</exec_depend>
    <exec_depend>moveit_core</exec_depend>
    <exec_depend>moveit_visual_tools</exec_depend>
    <exec_depend>sr_robot_msgs</exec_depend>
    <exec_depend>eigen</exec_depend>
    <!-- Realtime controller dependencies -->
    <exec_depend>pluginlib</exec_depend>
    <exec_depend>ros_ethercat_model</exec_depend>
    <exec_depend>sr_mechanism_controllers</exec_depend>
    <exec_depend>realtime_tools</exec_depend>
    <exec_depend>controller_interface</exec_depend>
    <exec_depend>sr_hardware_interface</exec_depend>
    <exec_depend>controller_manager_msgs</exec_depend>
    <exec_depend>control_msgs</exec_depend>
    <exec_depend>control_toolbox</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <controller_interface plugin="${prefix}/shadowhand_controller_plugins.xml" />
    </export>
</package>